# bc-ur

./: CLA.md  CMakeLists.txt  CONTRIBUTING.md  Makefile.in  README.md  config.h.in  configure  configure.ac  packaging.md
.github/workflows/: ci.yml
CLA-signed/: CLA.gorazdko.41F0EA1699A74C1E2FA41B538CF96BC3FF9DBBCE.asc  CLA.wolfmcnally.943652EE38441760C3DC35364B6C2FCF894780AE.asc
cmake/: bc-ur-config.cmake.in
debian/: README.Debian  README.source  bc-ur.cron.d.ex  bc-ur.doc-base.ex  changelog  control  copyright  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
debian/patches/: makefile  series  source  test-makefile
debian/upstream/: metadata.ex
src/: Makefile.in  bc-ur.hpp  bytewords.cpp  cbor-lite.hpp  cdecoder.h  cencoder.h  crc32.c  fountain-decoder.cpp  fountain-decoder.hpp  fountain-encoder.cpp  fountain-encoder.hpp  fountain-utils.cpp  fountain-utils.hpp  memzero.h  psram-allocator.hpp  random-sampler.cpp  random-sampler.hpp  sha2.c  sha2.h  ur-decoder.cpp  ur-decoder.hpp  ur-encoder.cpp  ur-encoder.hpp  ur.cpp  ur.hpp  utils.cpp  utils.hpp  xoshiro256.cpp  xoshiro256.hpp
test/: Makefile.in  test-utils.cpp  test-utils.hpp  test.cpp
